operator/pkg/gateway-api/testdata/gateway/tlsroute-mixed-termination-same-namespace/output/gateway-tlsroute-mixed-termination.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-mixed-termination
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-terminate
      port: 8883
      protocol: TLS
      hostname: tls.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-checks-certificate
    - name: tls-passthrough
      port: 8883
      protocol: TLS
      hostname: abc.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
status:
  conditions:
    - lastTransitionTime: "2025-07-01T14:29:32Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: tls-terminate
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:29:32Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: tls-passthrough
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
