operator/pkg/gateway-api/testdata/gateway/tlsroute-mixed-termination-same-namespace/output/tlsroute-gateway-conformance-mixed-terminateroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: gateway-conformance-mixed-terminateroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-mixed-termination
      namespace: gateway-conformance-infra
  hostnames:
    - tls.example.com
  rules:
    - backendRefs:
        - name: tcp-backend
          port: 3000
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-08-15T00:36:04Z"
          message: Accepted TLSRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-08-15T00:36:04Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: gateway-tlsroute-mixed-termination
        namespace: gateway-conformance-infra
